syntax = "proto3";

option java_multiple_files = true;

package com.sourceforgery.tachikoma.grpc.frontend.tracking;

import "com/sourceforgery/tachikoma/grpc/frontend/common.proto";
import "google/protobuf/empty.proto";

service DeliveryNotificationService {
    rpc notificationStream(google.protobuf.Empty) returns (stream EmailNotification);
}
